--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
             <p class="message">
                 <label>
                     Message: <br>
-                    <textarea name="message" rows="10" cols="50" required></textarea>
+                    <textarea name="message" rows="10" cols="40" required></textarea>
                 </label>
             <p>
                 <button type="submit">Send</button>
@@ -96,6 +96,7 @@
                     alt="Github"></a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
