--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <style>
         #welcomemsg {
             width: max-content;
+            max-width: 100%;
             margin: auto;
             margin-top: 20%;
             background-color: #777;
             border-radius: 50px;
             padding: 10px;
-            font-size: 100px;
+            font-size: 6.25em;
         }
 
         body {
@@ -23,6 +24,13 @@
 
         .loading {
             animation: load 3s linear;
+        }
+
+        @media (max-width: 1000px) {
+            h1#welcomemsg {
+                font-size: 1.8em;
+                margin-top: 350px;
+            }
         }
     </style>
 </head>
