--- a/website/about.html
+++ b/website/about.html
@@ -61,7 +61,7 @@
         </div>
     </header>
 
-    <button class="btt"><a href="#top">Back to top</a></button>
+    <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
 
     <div class="margin">
         <p><img id="intro_pic" src="../lib/js_bob.jpg" alt="A picture of JS"></p>
