--- a/website/contact.html
+++ b/website/contact.html
@@ -80,7 +80,7 @@
                     <textarea name="message" rows="10" cols="40" required></textarea>
                 </label>
             <p>
-                <button type="submit">Send</button>
+                <button class="submit" type="submit">Send</button>
             </p>
             </p>
         </div>
