--- a/website/proficiencies.html
+++ b/website/proficiencies.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </header>
-    <button class="btt"><a href="#top">Back to top</a></button>
+    <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
 
     <div id="edu exp cert">
         <p class="info_text">Details of my Education, Work experience and Professional certifications may be found in
