--- a/website/projects.html
+++ b/website/projects.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </header>
-    <button class="btt"><a href="#top">Back to top</a></button>
+    <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
 
     <p><img src="https://c.tenor.com/1RZeF9LS2VQAAAAC/heh-heheh.gif" alt="" class="interest_pic"></p>
 
