--- a/website/projects.html
+++ b/website/projects.html
@@ -59,7 +59,13 @@
     </header>
     <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
 
-    <p><img src="https://c.tenor.com/1RZeF9LS2VQAAAAC/heh-heheh.gif" alt="" class="interest_pic"></p>
+    <section>
+        <h1>Games</h1>
+        <p class="info_text">
+            This section is incomplete. There will only be javascript games linked.. for now. No downloads required :)
+        </p>
+        <p style="text-align: center; font-size: 2em;"><a href="../games/arrow_game/ag.html">Arrow game</a></p>
+    </section>
 
     <footer>
         <br><br><br>
